# TaskManagementDesktopApp

./: LICENSE  README.md
Daily-Tasks-Management/: .gitignore  README.md  package-lock.json  package.json
Daily-Tasks-Management/src/: App.css  App.tsx
Daily-Tasks-Management/src-tauri/: Cargo.toml  tasks.db  tauri.conf.json
Daily-Tasks-Management/src-tauri/src/: commands.rs  database.rs  database_browser.rs  git.rs  lib.rs  main.rs  model.rs  optimization.rs  projects.rs  services.rs
Daily-Tasks-Management/src-tauri/tests/: commands_tests.rs  database_tests.rs  git_tests.rs  project_manager_tests.rs  services_tests.rs
Daily-Tasks-Management/src/components/: CalenderView.tsx  Dashboard.tsx  DatabaseBrowser.tsx  EditTaskForm.tsx  GitStatusPanel.tsx  LogViewer.tsx  Navigation.tsx  ProjectsPanel.tsx  ServicesPanel.tsx  StatCard.tsx  TaskCard.tsx  TaskForm.tsx  TaskList.tsx
Daily-Tasks-Management/src/styles/: calendar-view.css  components.css  dashboard.css  database-browser.css  git-panel.css  log-viewer.css  navigation.css  projects-panel.css  services-panel.css  stat-card.css  task-card.css  task-list.css
Daily-Tasks-Management/src/types/: Database.ts  Git.ts  Logs.ts  Projects.ts  Services.ts  Tasks.ts
